WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
309995
[JSC] Fix null deref in Wasm operationAllocateResultsArray on OOM
https://bugs.webkit.org/show_bug.cgi?id=309995
Summary
[JSC] Fix null deref in Wasm operationAllocateResultsArray on OOM
Sosuke Suzuki
Reported
2026-03-15 19:54:46 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Sosuke Suzuki
Comment 1
2026-03-15 19:56:50 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60672
EWS
Comment 2
2026-03-15 21:39:31 PDT
Committed
309303@main
(3118ca3aba21): <
https://commits.webkit.org/309303@main
> Reviewed commits have been landed. Closing PR #60672 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-03-15 21:40:13 PDT
<
rdar://problem/172634224
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug