Cherry-pick 309303@main (3118ca3aba21). https://bugs.webkit.org/show_bug.cgi?id=309995

[JSC] Fix null deref in Wasm operationAllocateResultsArray on OOM
    https://bugs.webkit.org/show_bug.cgi?id=309995

    Reviewed by Yusuke Suzuki.

    When JSArray::tryCreateUninitializedRestricted fails due to OOM,
    throwOutOfMemoryError is called but we fall through and dereference
    the null result in result->initializeIndex() below.

    * Source/JavaScriptCore/wasm/WasmOperations.cpp:
    (JSC::Wasm::JSC_DEFINE_JIT_OPERATION):

    Canonical link: https://commits.webkit.org/309303@main

Canonical link: https://commits.webkit.org/298234.496@webkitglib/2.50